// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LibraryFilters rendering tests filters defined - test 1`] = `
<div>
  <div
    data-slot="popover"
    data-testid="mock-react-popover-root"
  >
    <div
      class="relative inline-flex"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2"
        data-slot="popover-trigger"
        data-testid="filters-trigger-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        Filter
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-up h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m18 15-6-6-6 6"
          />
        </svg>
      </button>
      <span
        class="border font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 absolute -top-1 -right-1.5 flex h-4 min-w-4 items-center justify-center rounded-full p-0 text-xs"
        data-slot="badge"
        data-testid="count-badge"
      >
        1
      </span>
    </div>
    <div
      data-testid="mock-react-popover-portal"
    >
      <div
        align="center"
        class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-72 origin-(--radix-popover-content-transform-origin) rounded-md border p-4 shadow-md outline-hidden"
        data-slot="popover-content"
        data-testid="mock-react-popover-content"
        sideoffset="4"
      >
        <div>
          <div
            class="mb-1 flex items-center justify-end"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 size-9 h-6 w-6 text-slate-500 hover:text-slate-900"
              data-slot="tooltip-trigger"
              data-testid="reset-btn"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rotate-ccw h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                />
                <path
                  d="M3 3v5h5"
                />
              </svg>
            </button>
            <div
              class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
              data-slot="tooltip-content"
              data-testid="mock-tooltip-content"
              sideoffset="0"
            >
              Filter zurücksetzen
            </div>
          </div>
          <div
            class="space-y-4"
          >
            <div
              class="relative w-full"
              data-testid="search-filter"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search absolute top-1/2 left-3 h-4 w-4 -translate-y-1/2 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
              <input
                class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive pl-9"
                data-slot="input"
                data-testid="input"
                placeholder="Vorlagen durchsuchen..."
                value="test-1"
              />
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
            <div
              class="space-y-3"
              data-testid="categories-filter"
            >
              <div
                class="flex items-center justify-between"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
                  data-slot="label"
                >
                  Kategorien
                </label>
              </div>
              <div
                class="max-h-50 space-y-2 overflow-y-auto"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    data-testid="category-cat-1"
                    id="category-cat-1"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer text-sm font-normal"
                    data-slot="label"
                    for="category-cat-1"
                  >
                    cat-1
                  </label>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    data-testid="category-cat-2"
                    id="category-cat-2"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer text-sm font-normal"
                    data-slot="label"
                    for="category-cat-2"
                  >
                    cat-2
                  </label>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    data-testid="category-cat-3"
                    id="category-cat-3"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer text-sm font-normal"
                    data-slot="label"
                    for="category-cat-3"
                  >
                    cat-3
                  </label>
                </div>
              </div>
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
            <div
              class="space-y-3"
              data-testid="models-filter"
            >
              <div
                class="flex items-center justify-between"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
                  data-slot="label"
                >
                  Modelle
                </label>
              </div>
              <div
                class="max-h-50 space-y-2 overflow-y-auto"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    data-testid="model-mod-1"
                    id="model-mod-1"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer text-sm font-normal"
                    data-slot="label"
                    for="model-mod-1"
                  >
                    mod-1
                  </label>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    data-testid="model-mod-2"
                    id="model-mod-2"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer text-sm font-normal"
                    data-slot="label"
                    for="model-mod-2"
                  >
                    mod-2
                  </label>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    data-testid="model-mod-3"
                    id="model-mod-3"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer text-sm font-normal"
                    data-slot="label"
                    for="model-mod-3"
                  >
                    mod-3
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LibraryFilters rendering tests filters empty - test 1`] = `
<div>
  <div
    data-slot="popover"
    data-testid="mock-react-popover-root"
  >
    <div
      class="relative inline-flex"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2"
        data-slot="popover-trigger"
        data-testid="filters-trigger-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        Filter
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-up h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m18 15-6-6-6 6"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="mock-react-popover-portal"
    >
      <div
        align="center"
        class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-72 origin-(--radix-popover-content-transform-origin) rounded-md border p-4 shadow-md outline-hidden"
        data-slot="popover-content"
        data-testid="mock-react-popover-content"
        sideoffset="4"
      >
        <div>
          <div
            class="mb-1 flex items-center justify-end"
          />
          <div
            class="space-y-4"
          >
            <div
              class="relative w-full"
              data-testid="search-filter"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search absolute top-1/2 left-3 h-4 w-4 -translate-y-1/2 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
              <input
                class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive pl-9"
                data-slot="input"
                data-testid="input"
                placeholder="Vorlagen durchsuchen..."
                value=""
              />
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
            <div
              class="text-sm text-slate-500"
              data-testid="categories-empty"
            >
              Keine Kategorien verfügbar
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
            <div
              class="text-sm text-slate-500"
              data-testid="models-empty"
            >
              Keine Modelle verfügbar
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
